tests/errors/IndexOutOfBounds.imp
VAR
  a[10]
BEGIN
  a[42] := 42;
END
